# haskellbook

./: .gitignore  FunctionWithLet.hs  FunctionWithWhere.hs  README.md  RunctionWithWhere.hs  ch3exercises.hs  learn.hs  multTen.hs  piaresquared.hs  practice.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  rvrs.hs
ch10_folds/: DbProcessing.hs  exercises.hs  fibs.hs
ch11_adts/: BTree.hs  Exercises.hs  Farmer.hs  GuessWhat.hs  HigherKinds.hs  Jammin.hs  Product.hs  Quantum.hs  TooMany.hs  stuff.hs
ch12_adversity/: BinaryTree.hs  EitherLib.hs  Exercises.hs  MaybeLib.hs  Person.hs  Unfolds.hs
ch13_building/: twoo.hs
ch14_testing/: Examples.hs  Identity.hs  README.md  Trivial.hs
ch14_testing/addition/: Addition.hs  addition.cabal
ch15_monoids/: Exercises.hs  Madness.hs  MonoidExercises.hs  QuickCheckSandbox.hs  SemiGroupExercises.hs
ch16_functor/: compose_fmap_breakdown.md  countingBad1.hs  functors1.hs  whocares1.hs
ch4_basic_datatypes/: AddStuff.hs  ChangeMood.hs  FuncIgnoresArgs.hs  SyntaxExercises.hs  SyntaxExercises.hs!  Uncurry.hs  eff.hs  ex1.hs  greetIfCool1.hs  isPalindrome.hs  myAbs.hs
ch5_types/: ParametricityExercises.hs  arith3broken.hs  exercises.hs  fixIt1.hs  type1KwonDo.hs  type2KwonDo.hs  type3KwonDo.hs  type4KwonDo.hs
ch6_typeclasses/: BasicShow.hs  Date.hs  DoesItTypeCheck.hs  EqExercises.hs  Exercises.hs  Identity.hs  MatchTheTypes.hs  Numberish.hs  OrdExamples.hs  TypeKwonDo.hs
ch7_more_functional_patterns/: CaseExpressions.hs  CasePractice.hs  Exercises.hs  Guard.hs  GuardExercises.hs  Lambdas.hs  MatchingTuples.hs  (+8 more)
(+28 files in other folders)
